[tool.poetry]
name = "optpipeline"
version = "0.1.0"
description = "Zhe Data-oriented DSL"
authors = ["Lyzh <enterindex@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
